Only use "jar:" prefix for URLs that have a non-empty path after "!/"